k8s/client/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  labels:
    app: client
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - port: 3000
    targetPort: 3000
    name: http
